Bug 132241 - Slow file opening/and saving SKIA Raster/Vulkan (and CAIRO?)
Summary: Slow file opening/and saving SKIA Raster/Vulkan (and CAIRO?)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-04-18 20:43 UTC by Telesto
Modified: 2020-09-25 10:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-04-18 20:43:21 UTC
Description:
Slow file opening/and saving SKIA Raster/Vulkan (and CAIRO)

Steps to Reproduce:
1. Open attachment 153792 [details]
2. Save the attachment

Not sure if Cairo and Skia are related (else dupe of bug 127260)



Actual Results:
Slow file-opening & saving

Expected Results:
Fast opening and saving


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 4475bcd83aac7e033fc5250f268eb922bd471e7b
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Vulkan; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 Commit Notification 2020-04-20 13:08:03 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3974dfee554bda82fdfb89cd4a2ea8926eb31243

batch Skia xor drawing (tdf#132241)

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 BogdanB 2020-05-11 08:52:02 UTC
7 seconds to open, edit a letter, and save it...

Solved.

Verified on
Version: 7.0.0.0.alpha1
Build ID: 6a03b2a54143a9bc0c6d4c7f1...
CPU threads: 4; OS: Linux 5.4; UI render: Skia/Raster; VCL: x11; 
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 3 Luboš Luňák 2020-09-25 10:30:31 UTC
Backport https://gerrit.libreoffice.org/c/core/+/103337 will make the file slower again. I don't plan on backporting the drawGradient() implementation, so this will stay fixed only in master.