batch Skia xor drawing (tdf#132241)

The code previously applied the xor operation after each drawing,
but the bugdoc draws a large number of polygons in xor mode,
so the xor drawing was done repeatedly. Do the xor drawing just
once when leaving the xor mode.

Change-Id: I6c8d1c2f01688dc957a0af75232ee9fb69fe5d1b